在连接断开之后，发起重试